Fix fullscreen ID and dark mode issues
- Resolved ID null issue in fullscreen one-page doc.
- Resolved dark mode issue in one-page doc.
- Resolved contributor search field in dark mode

--- a/assets/scss/frontend_dark-mode.scss
+++ b/assets/scss/frontend_dark-mode.scss
@@ -25,6 +25,18 @@ body.body_dark {
 
 	.ezdoc_contributed_user_avatar .ezdoc_contributed_users .doc_users_dropdown {
 		box-shadow: none;
+		form {
+			input {
+				color: black;
+				&::placeholder{
+					color: black;
+				}
+				&::focus{
+					color: black;
+					opacity: 1;
+				}
+			}
+		}
 	}
 
 	.doc_rightsidebar {
